--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <html>
 <body>
 
-<h1>EasyCast - Mirror Display Support</h1>
+<h1>EasyTeach Whiteboard</h1>
 
-<p>If you have any questions or suggestions
-, please send us email</p>
-<p/>
-<p><b>Contact us :  housespych@gmail.com</b></p>
-<p><b>Follow us :  https://www.instagram.com/easycast_official</b></p>
+Using this app, you can easily create Whiteboard sessions and then record the entire sessions as videos.
+<br>
+<br>
+Including digital whiteboard techniques in your video is a great way to make your videos more interesting and control the users attention.
+<br>
+You can draw on a blank white background, or annotate images/PDF in order to demonstrate something.
+<br>
+<br>
+
+<b>KEY FEATURES</b>
+<br>
+• Voice-record
+<br>
+• Import pictures from you photo library, build-in camera
+<br>
+• Import documents (PDF) from iCloud,Dropbox,Google Drive
+<br>
+• Import videos
+<br>
+• Camera preview with beauty face mode
+<br>
+• Share your recordings with friends
+<br>
+
+<br>
+<b><font color="red">
+    To View and Download PDF files on Google Drive, please allow EasyTeach to access Google Drive</font><b>
+<br>
+<br>
+<b><font color="blue">View on App Store : https://apps.apple.com/us/app/easyteach-whiteboard/id1453532739</color></b>
+<br>
+<br>
+<b>Privacy Policy : https://www.freeprivacypolicy.com/privacy/view/fd5b0d69033f44a68e550a94e615478e</b>
+<br>
+<br><b>Contact us : housepsych@gmail.com</b>
+
 </body>
 </html>
 
